20010-01-12  James Wilkinson <james@slor.net>
* atari_sdl.c:
  Committed patch by Tomaz Krasuski to fix DirectX default for Win32 SDL driver.
  Also made change to correct garbage column in some scaling modes.


2010-01-10  Piotr Fusik  <fox@scene.pl>
* util/colormix.asx, util/colormix.xex: program for testing PAL delay line;
  use arrow keys and space


2010-01-07  Piotr Fusik  <fox@scene.pl>
* ui.c: wrapped UpdateColourControls into ifdef

* colours.c, colours_ntsc.c, colours_pal.c, sio.c: killed MSVC warnings

* win32/msc/config.h, win32/msc/Makefile: updated (colour_ntsc etc.)

  Commiting patch submitted by David Dahlstrom <ddahlstrom@charter.net>
* platform.h, ui.c, ui.h, ui_basic.c, win32/atari_win32.[ch],
  win32/joystick.[ch], win32/main.[ch], win32/main.cpp, win32/render_*.*,
  win32/screen_win32.[ch]: display and controller enhancements


2009-12-28  Piotr Fusik  <fox@scene.pl>
* configure.ac, devices.c: MKDIR_TAKES_ONE_ARG for MinGW

* colours_ntsc.h: M_PI for MinGW

  Commiting patch submitted by Tomasz Krasuski <tomasz.krasuski@interia.pl>
* DOC/USAGE, atari.c, atari800.man, atari_sdl.c, colours.[ch],
  colours_external.[ch], colours_ntsc.[ch], colours_pal.[ch] filter_ntsc.[ch],
  configure.ac, ui.c, atari_ntsc/atari_ntsc.[ch],
  atari_ntsc/atari_ntsc_config.h, atari_ntsc/atari_ntsc_impl.h:
  1. Removed Atari800-specific code from the atari_ntsc library, and placed it
  in a new module, FILTER_NTSC. This new module serves as an interface between
  Atari800 and Blargg's library.
  2. Removed the palette generation code from atari_ntsc and placed it in a new
  module, COLOURS_NTSC. Palette generation is from now on used both in
  "standard" mode and in NTSC-filtered mode. Old default palettes have been
  removed from the COLOURS module.
  3. Introduced a new module, COLOURS_PAL, that includes improved routines for
  PAL palette generation. PAL Ataris produce colours in a similar way to NTSC