@@ -176,7 +176,7 @@ SUPPORTS_SOUND_OSS=yes
 AC_CHECK_HEADERS([fcntl.h sys/ioctl.h sys/soundcard.h],,SUPPORTS_SOUND_OSS=no)
 SUPPORTS_RDEVICE=yes
 if [[ "$a8_host" = "win" ]]; then
-    AC_CHECK_HEADERS([winsock2.h],,SUPPORTS_RDEVICE=no)
+    AC_CHECK_HEADERS([windows.h winsock2.h],,SUPPORTS_RDEVICE=no)
 else
     AC_CHECK_HEADERS([arpa/inet.h netdb.h netinet/in.h sys/socket.h termios.h],,SUPPORTS_RDEVICE=no)
 fi
@@ -315,8 +315,12 @@ dnl Don't make this a windowed app, make it a console app.
         A8_NEED_LIB(dinput)
         A8_NEED_LIB(dsound)
         A8_NEED_LIB(dxguid)
+	A8_NEED_LIB(d3d9)
+	A8_NEED_LIB(d3dx9)
+	A8_NEED_LIB(gdiplus)
+        A8_NEED_LIB(stdc++)
         A8_NEED_LIB(ws2_32)
-        OBJS="win32/atari_win32.o win32/screen_win32.o win32/main.o win32/keyboard.o win32/joystick.o win32/atari.ro"
+        OBJS="win32/atari_win32.o win32/screen_win32.o win32/render_direct3d.o win32/render_directdraw.o win32/render_gdi.o win32/render_gdiplus.o win32/main.o win32/keyboard.o win32/joystick.o win32/atari.ro"
         CFLAGS="$CFLAGS -ansi -pedantic -Waggregate-return -Wmissing-declarations -Wmissing-prototypes -Wredundant-decls -Wstrict-prototypes -Winline"
         ;;
     x11*)
